1. Change most AsyncTask to Thread for solve long action while load speech media, there is few AsyncTask not fix. 2. Change the "download all" function become service, users can do other operation while files download. 3. Never into save power mode on LamrimReaderActivity by set getWindow().addFlags(WindowManager.LayoutParams.FLAG_KEEP_SCREEN_ON). 4. Fix ArrayIndexOutOfBoundsException in RobotoCalendarView. 5. Fix the WindowManager$BadTokenException by initial new view with Activity every time on showToastPopupWindow. 6. Change the download command of SpeechMenuActivity from string to int[]. 7. Change all functions of FileSysManager to non static function, every Activity have it's own.